Fix regression with character strike name not wrapping

--- a/src/styles/actor/tabs/_actions.scss
+++ b/src/styles/actor/tabs/_actions.scss
@@ -158,56 +158,6 @@ ol.actions-list {
         }
 
         &.action {
-            .item-name {
-                align-items: center;
-                display: flex;
-                gap: var(--space-8);
-                grid-area: icon-name;
-                margin: 0;
-
-                h4 {
-                    margin: 0;
-                    max-width: fit-content;
-                }
-
-                .actions-title {
-                    flex: 1;
-
-                    .action-name {
-                        align-items: baseline;
-                        display: flex;
-                        flex-direction: row;
-                        gap: 0.5em;
-
-                        > h4 {
-                            a:hover {
-                                color: var(--color-pf-primary);
-                            }
-
-                            .action-glyph {
-                                color: var(--text-dark);
-                            }
-                        }
-                    }
-                }
-            }
-
-            .item-controls {
-                font-size: var(--font-size-12);
-                grid-area: controls;
-                white-space: nowrap;
-            }
-
-            .item-summary {
-                flex-basis: 100%;
-            }
-
-            &.hidden {
-                display: none;
-            }
-        }
-
-        &.action {
             align-items: center;
             column-gap: var(--space-8);
             display: grid;
@@ -216,6 +166,10 @@ ol.actions-list {
                 "icon    buttons tracking controls" auto
                 "summary summary summary   summary" auto
                 / min-content 1fr min-content 2rem;
+
+            &.hidden {
+                display: none;
+            }
 
             > .icon {
                 grid-area: icon;
@@ -235,6 +189,12 @@ ol.actions-list {
                 > a:hover {
                     color: var(--color-pf-primary);
                 }
+            }
+
+            .item-controls {
+                font-size: var(--font-size-12);
+                grid-area: controls;
+                white-space: nowrap;
             }
 
             .button-group {
